Fixing `z-index`

--- a/dp-web/src/app/widgets/header/header.component.scss
+++ b/dp-web/src/app/widgets/header/header.component.scss
@@ -3,7 +3,7 @@
 :host {
   height: $header-height;
   min-height: $header-height;
-  z-index: 1;
+  z-index: 5;
   width: inherit;
   position: fixed;
   top: 0;
